docs: contributing: encourage using skip smudge
Encourage users to reduce cloning time and bandwidht by using
`git lfs install --skip-smudge` or `GIT_LFS_SKIP_SMUDGE=1`, informing
on how to pull the artifacts individually and how doctools (>= v0.4.3)
serve can do it on demand.

Also add more file types to be tracked by git-lfs.

Signed-off-by: Jorge Marques <jorge.marques@analog.com>

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,13 +1,15 @@
 {
   "image": "python:latest",
-  "name": "Documentation codespace (adi_doctools)",
+  "name": "Documentation editor",
   "customizations": {
     "codespaces": {
       "openFiles": ["docs/index.rst"]
     }
   },
   "features": {
-    "ghcr.io/devcontainers/features/git-lfs:1": {}
+    "ghcr.io/devcontainers/features/git-lfs:1": {
+      "autoPull": "false"
+    }
   },
   "waitFor": "onCreateCommand",
   "updateContentCommand": "python -m venv venv ; source venv/bin/activate ; pip install -r docs/requirements.txt",
@@ -17,7 +19,7 @@
   },
   "portsAttributes": {
     "8000": {
-      "label": "livel-editor",
+      "label": "live-editor",
       "onAutoForward": "openPreview"
     }
   },
