--- a/.gitattributes
+++ b/.gitattributes
@@ -11,3 +11,4 @@
 *.odt filter=lfs diff=lfs merge=lfs -text
 *.odp filter=lfs diff=lfs merge=lfs -text
 *.ods filter=lfs diff=lfs merge=lfs -text
+*.bin filter=lfs diff=lfs merge=lfs -text
