--- a/.github/workflows/top-level.yml
+++ b/.github/workflows/top-level.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Build doc
       working-directory: docs
       run: |
-        make html
+        make html SPHINXOPTS='-W --keep-going'
 
     - name: Store the generated doc
       uses: actions/upload-artifact@v4
