--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,7 @@
 sphinx
 https://github.com/analogdevicesinc/doctools/releases/download/latest/adi-doctools.tar.gz
-sphinx-tabs
 myst_parser
 sphinxcontrib-mermaid
+sphinx-inline-tabs
+wireviz
+
