Add apt install graphviz in workflow

--- a/.github/workflows/top-level.yml
+++ b/.github/workflows/top-level.yml
@@ -18,6 +18,11 @@ jobs:
       with:
         lfs: 'true'
 
+    - name: Install apt packages
+      run: |
+        sudo apt update
+        sudo apt install -y graphviz
+
     - name: Install pip packages
       working-directory: docs
       run: |
