--- a/.github/workflows/top-level.yml
+++ b/.github/workflows/top-level.yml
@@ -27,7 +27,8 @@ jobs:
     - name: Build doc
       working-directory: docs
       run: |
-        make html SPHINXOPTS='-j auto -W --keep-going'
+        [[ "${{ runner.debug }}" == "false" ]] && j_="-jauto"
+        make html SPHINXOPTS="$j_ -W --keep-going"
 
     - name: Store the generated doc
       uses: actions/upload-artifact@v4
