.github: Don't parallelize Sphinx on debug (2)
Signed-off-by: Jorge Marques <jorge.marques@analog.com>

--- a/.github/workflows/top-level.yml
+++ b/.github/workflows/top-level.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Build doc
       working-directory: docs
       run: |
-        [[ "${{ runner.debug }}" == "false" ]] && j_="-jauto"
+        [[ "${{ runner.debug }}" != "1" ]] && j_="-jauto"
         make html SPHINXOPTS="$j_ -W --keep-going"
 
     - name: Store the generated doc
